--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ model-viewer {
   transition: width 0.3s;
 }
 
-#ar-button {
+/*#ar-button {
   background-image: url(ar_icon.png);
   background-repeat: no-repeat;
   background-size: 20px 20px;
@@ -68,7 +68,7 @@ model-viewer {
   line-height: 36px;
   border-radius: 18px;
   border: 1px solid #DADCE0;
-}
+}*/
 
 #ar-button:active {
   background-color: #E8EAED;
